fix: remove margin-bottom from wlo-editable-text and move it into the swimlane grid definition in order to add proper spacing

--- a/src/app/wlo-search/template/template.component.scss
+++ b/src/app/wlo-search/template/template.component.scss
@@ -33,7 +33,6 @@
 
 // add margin-bottom to editable text component
 wlo-editable-text {
-    margin-bottom: 8px;
     // this is necessary for accordions to work properly
     width: 100%;
 }
