--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,10 @@ body {
     text-align: center;
 }
 
+.w-100 {
+    width: 100%;
+}
+
 .flex-direction-column {
     flex-direction: column;
 }
